--- a/index.html
+++ b/index.html
@@ -221,8 +221,11 @@
                     </header>
                     <main>
                         <p>As the crisp autumn air settles in and the leaves begin to change, there’s no better way to embrace the season than by filling your home with warm, inviting scents. Candles can instantly transform your space, creating that cozy, comforting atmosphere we all crave in fall. Whether it’s the aroma of spiced pumpkin, warm vanilla, or earthy wood, the right candle can elevate your autumnal experience. Even better, purchasing from independent shops not only supports small businesses but also gives you access to unique, handcrafted creations you won’t find anywhere else. Here are some of the best candle scents to make you feel cozy this autumn, along with links to their independent sellers.</p>
-                        <h3>1. Pumpkin Chai - Brooklyn Candle Studio</h3>
+                        <h3>1. Toasted Pumpkin - Brooklyn Candle Studio</h3>
                         <p>Few scents capture the essence of fall like the comforting blend of pumpkin and chai spices. Brooklyn Candle Studio’s Pumpkin Chai candle offers a rich, warm aroma that instantly brings autumn into your home. The fragrance combines creamy pumpkin with notes of cinnamon, nutmeg, and clove, with a touch of vanilla for that extra cozy sweetness. Each candle is hand-poured in Brooklyn, made from 100% soy wax for a clean, eco-friendly burn. The minimalist design and natural ingredients make this candle a fall staple.</p>
+                        <a href="https://brooklyncandlestudio.com/products/toasted-pumpkin-limited-edition-candle" class="buy-now-button" target="_blank">
+                            Buy Candle Now
+                        </a>
                         <h3>2. Sweater Weather - Frostbeard Studio</h3>
                         <p>If you’re a book lover, Frostbeard Studio creates candles specifically designed to evoke the cozy feeling of curling up with a good read. Their Sweater Weather candle is the perfect scent to accompany a quiet autumn afternoon. With notes of eucalyptus, mint, and cedar, it has a refreshing yet warm aroma that captures the crispness of the outdoors while bringing a soothing calm indoors. Made with soy wax and phthalate-free fragrance oils, this candle is a great option for anyone looking to enhance their fall reading nook.</p>
                         <h3>3. Autumn Leaves - P.F. Candle Co.</h3>
