--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <p>Kehlani has solidified herself as a staple in contemporary R&B with her raw vulnerability and smooth vocals. With her latest album Crash, released earlier in 2024, Kehlani offered a blend of emotional honesty and upbeat production that resonated with both long-time fans and new listeners. Crash explores themes of love, self-discovery, and healing—everything that makes Kehlani such a key artist for anyone who cherishes emotionally driven R&B.</p>
                         <p>Her follow-up ep in August 2024, While We Wait 2, a sequel to her popular 2019 mixtape, has only further proven her consistency. Fans and critics alike praised the album for its mature sound, reflecting the personal growth she’s experienced since her earlier days. The project sparked conversations about self-love and emotional independence, making it a favorite among listeners.</p>
                         <h4>My Personal Favourite</h4>
-                        <h4>Tears (feat. Omah Lay)</h4>
+                        <h4>Tears (feat. Omah Lay) - Crash</h4>
                         <audio controls>
                         <source src="https://music.apple.com/gb/song/tears-feat-omah-lay/1752190775" type="audio/mpeg">
                         </audio>
