--- a/index.html
+++ b/index.html
@@ -96,8 +96,10 @@
                         <img src="https://i.scdn.co/image/ab67616d00001e02cd4387a0dff2676ffe34c72d" alt="Cat Burns Early Twenties Album Cover Photo">
                         <p>Cat Burns, a rising star in the R&B scene, is known for her soulful voice and deeply personal lyrics. Her debut album Early Twenties, released in 2024, is an introspective journey into the emotional highs and lows of growing up and finding one's identity. It perfectly captures the essence of modern-day coming-of-age experiences, touching on love, heartbreak, and mental health.</p>
                         <p>Early Twenties was met with rave reviews from both critics and fans alike. R&B listeners, in particular, appreciated her honest approach to songwriting, and her ability to express emotions many young adults are currently navigating. As a newcomer, Cat Burns brings a fresh voice to the genre while staying true to its introspective roots.</p>
-                        <h4>My Personal Favourite</h4>
-                        <h4>End Game</h4>
+                        <h4>
+                            My Personal Favourite:
+                            <a href="https://music.apple.com/gb/album/end-game/1735981910?i=1735981922"target="_blank">End Game  </a>
+                        </h4>
                         <audio controls>
                         <source src="https://music.apple.com/gb/song/end-game/1735983042" type="audio/mpeg">
                         </audio>
@@ -110,8 +112,10 @@
                         <img src="https://i.scdn.co/image/ab67616d00001e021acefd1630385ea2dc5b0c4e" alt="Lucky Daye Alogithm Album Cover Photos">
                         <p>Lucky Daye continues to redefine what R&B can sound like, and his 2024 album Algorithm is the perfect example of his innovation. Known for blending old-school R&B vibes with futuristic production, Lucky Daye effortlessly stands out in the crowded music scene. His smooth falsetto, combined with intricate melodies and beats, has garnered him a growing fan base and industry respect.</p>
                         <p>Algorithm was a hit among fans, who praised its creative take on love, relationships, and personal growth. R&B purists celebrated his homage to the genre’s history, while younger audiences loved his modern twist. The album’s release cemented Lucky Daye as a key artist to watch as R&B continues to evolve.</p>
-                        <h4>My Personal Favourite</h4>
-                        <h4>HERicane</h4>
+                        <h4>
+                            My Personal Favourite:
+                            <a href="https://music.apple.com/gb/album/hericane-single/1740148261"target="_blank">HERicane </a>
+                        </h4>
                         <audio controls>
                         <source src="https://music.apple.com/gb/song/hericane/1747951733" type="audio/mpeg">
                         </audio>
@@ -124,8 +128,10 @@
                         <img src="https://i.scdn.co/image/ab67616d00001e027955a7d9d5998317da3fbb04" alt="Jazmine Sullivan Heaux Tales Album Cover Photo">
                         <p>Though released in 2021, Jazmine Sullivan's Heaux Tales continues to be one of the most talked-about R&B projects. The album’s narrative-driven approach explores themes of femininity, love, and empowerment, offering listeners a bold commentary on societal expectations placed on women. Each track is a tale—an introspective look into the lives of women navigating love, sex, and relationships.</p>
                         <p>Heaux Tales received widespread acclaim from critics and fans alike, praised for its boldness and emotional depth. Sullivan's powerful voice and ability to deliver raw emotion in her music have made this project an instant classic. It’s essential listening for any R&B fan seeking substance and storytelling in their music.</p>
-                        <h4>My Personal Favourite</h4>
-                        <h4>Lost One</h4>
+                        <h4>
+                            My Personal Favourite:
+                            <a href="https://music.apple.com/gb/song/lost-one/1609166550"target="_blank">Lost One </a>
+                        </h4>
                         <audio controls>
                         <source src="https://music.apple.com/gb/song/lost-one/1609166550" type="audio/mpeg">
                         </audio>
@@ -138,8 +144,10 @@
                         <img src="https://i.scdn.co/image/ab67616d00001e02d03c8d74d7f963dee63ef893" alt="Victoria Monét Jaguar Album Cover Art">
                         <p>Victoria Monét’s Jaguar II is a celebration of sensuality, confidence, and empowerment. Released in 2023, this album marked her as a standout figure in the R&B world, blending elements of funk, soul, and R&B into a cohesive body of work. Victoria’s songwriting is sharp, witty, and sultry, with songs that embrace both personal and sexual freedom.</p>
                         <p>Jaguar was praised for its unique production and Monét’s ability to command attention with her voice. R&B fans were quick to rally around this release, celebrating it for its blend of 70s funk grooves and modern R&B flair. With each release, Victoria Monét proves she’s an artist worth paying attention to for anyone who values artistry and evolution in R&B.</p>
-                        <h4>My Personal Favourite</h4>
-                        <h4>Stop (Askin' Me 4Shyt)</h4>
+                        <h4>
+                            My Personal Favourite:
+                            <a href="https://music.apple.com/gb/song/stop-askin-me-4shyt/1767519990"target="_blank">Stop (Askin' Me 4Shyt)</a>
+                        </h4>
                         <audio controls>
                         <source src="https://music.apple.com/gb/song/stop-askin-me-4shyt/1767519990" type="audio/mpeg">
                         </audio>
@@ -152,8 +160,10 @@
                         <img src="https://upload.wikimedia.org/wikipedia/en/8/87/Tems_-_Born_in_the_Wild_album_cover.jpg" alt="Tems Born in The Wild Album Cover Art">
                         <p>Nigerian artist Tems has become a global sensation, bringing her unique fusion of Afrobeats and R&B to a worldwide audience. Her 2023 release Born in The Wild is a breathtaking exploration of freedom, resilience, and self-awareness. Tems’ smoky vocals and ethereal production have enchanted listeners, making her one of the most exciting and important voices in modern R&B.</p>
                         <p>Born in The Wild received glowing praise for its bold fusion of genres and for Tems’ ability to weave deeply emotional narratives. R&B fans, in particular, have appreciated her soulful delivery and unique sound, which manages to feel both familiar and entirely new. If you haven’t been listening to Tems, now’s the time.</p>
-                        <h4>My Personal Favourite</h4>
-                        <h4>Love Me JeJe</h4>
+                        <h4>
+                            My Personal Favourite:
+                            <a href="https://music.apple.com/gb/song/love-me-jeje/1750361983"target="_blank">Love Me JeJe</a>
+                        </h4>
                         <audio controls>
                         <source src="https://music.apple.com/gb/song/love-me-jeje/1750361983" type="audio/mpeg">
                         </audio>
@@ -166,8 +176,10 @@
                         <img src="https://i.scdn.co/image/ab67616d00001e022684ee4b66ba735cfc792736" alt="Leon Thomas Electric Dusk Album Cover Art">
                         <p>Leon Thomas has been quietly working behind the scenes as a songwriter and producer for some of the biggest names in music, but his 2023 album Electric Dusk puts him firmly in the spotlight. The project showcases his immense talent not only as a vocalist but as a multi-instrumentalist and producer. Blending R&B, jazz, and funk, Electric Dusk is an album that takes risks while remaining deeply soulful.</p>
                         <p>Fans and critics have praised Electric Dusk for its experimental nature and Thomas' smooth, versatile voice. R&B fans, especially those who enjoy artists who push the boundaries of the genre, have found this project to be an exciting addition to the 2023 music landscape. Leon Thomas is carving out a lane of his own and is definitely an artist you should have on your radar.</p>
-                        <h4>My Personal Favourite</h4>
-                        <h4>Crash & Burn</h4>
+                        <h4>
+                            My Personal Favourite:
+                            <a href="https://music.apple.com/gb/song/crash-burn/1699908681"target="_blank">Crash & Burn</a>
+                        </h4>
                         <audio controls>
                         <source src="https://music.apple.com/gb/song/crash-burn/1699908681" type="audio/mpeg">
                         </audio>
